добавил логику обработки формы на главной, сохранение в lowdb

--- a/source/template/common/_form.pug
+++ b/source/template/common/_form.pug
@@ -1,19 +1,18 @@
 section.form
   .container
-    if (msgsemail)
-      .status= msgemail
+    if (msgsemail.length)
+      .status= msgsemail
     .form__subtitle.subtitle Контактные данные
     h2.form__title.title Пишите, пообщаемся
     form(action="/" method="POST").form-email
       .form-email__line
-        label.form-email__label(for="") Имя *
-        input.form-email__input(type="text" name="name")
+        label.form-email__label(for="msg-name") Имя *
+        input.form-email__input(id="msg-name" type="text" name="name" required)
       .form-email__line
-        label.form-email__label(for="") Email *
-        input.form-email__input(type="email" name="email")
+        label.form-email__label(for="msg-email") Email *
+        input.form-email__input(id="msg-email" type="email" name="email" required)
       .form-email__line
-        label.form-email__label(for="") Сообщение
-        textarea(name="message").form-email__textarea
+        label.form-email__label(for="msg-message") Сообщение
+        textarea(name="message" id="msg-message").form-email__textarea
       .form-email__line
         button(type="submit").form-email__button.button Отправить
-    
