--- a/source/template/common/_form.pug
+++ b/source/template/common/_form.pug
@@ -1,6 +1,6 @@
 section.form
   .container
-    if (msgsemail.length)
+    if (msgsemail && msgsemail.length)
       .status= msgsemail
     .form__subtitle.subtitle Контактные данные
     h2.form__title.title Пишите, пообщаемся
