--- a/source/template/pages/admin.pug
+++ b/source/template/pages/admin.pug
@@ -14,20 +14,20 @@ block content
         .form-container
           form.form-skill(action='/admin/skills' method="POST")
             .form-title Счетчики
-            if (msgskill)
+            if (msgskill && msgskill.length)
               .status= msgskill
-            label.form-skill__input-line 
+            label.form-skill__input-line
               span.form-skill__input-title Возраст
-              input(name="age" type="number").form-skill__input
-            label.form-skill__input-line 
+              input(name="age" type="number" required).form-skill__input
+            label.form-skill__input-line
               span.form-skill__input-title Концертов
-              input(name="concerts" type="number").form-skill__input
-            label.form-skill__input-line 
+              input(name="concerts" type="number" required).form-skill__input
+            label.form-skill__input-line
               span.form-skill__input-title Число городов
-              input(name="cities" type="number").form-skill__input
-            label.form-skill__input-line 
+              input(name="cities" type="number" required).form-skill__input
+            label.form-skill__input-line
               span.form-skill__input-title Лет на сцене
-              input(name="years" type="number").form-skill__input
+              input(name="years" type="number" required).form-skill__input
             .form__btns.form-skill__input-line
               button(type="submit").button Сохранить
           form.form-upload(action='/admin/upload' method="POST" enctype="application/x-www-form-urlencoded")
