--- a/source/template/pages/admin.pug
+++ b/source/template/pages/admin.pug
@@ -30,9 +30,9 @@ block content
               input(name="years" type="number" required).form-skill__input
             .form__btns.form-skill__input-line
               button(type="submit").button Сохранить
-          form.form-upload(action='/admin/upload' method="POST" enctype="application/x-www-form-urlencoded")
+          form.form-upload(action='/admin/upload' method="POST" enctype="multipart/form-data")
             .form-title Добавить товар
-            if (msgfile)
+            if (msgfile && msgfile.length)
               .status= msgfile
             .form-upload__input-line
               .form-upload__wraper
@@ -40,8 +40,8 @@ block content
                   input(name="photo" type="file" required accept="image/*").form-upload__input-file
                   span.form-upload__input-file-title Загрузить фото
             .form-upload__input-line
-              input(name="name" type="text" placeholder="Название").form-upload__input
+              input(name="name" type="text" placeholder="Название" required).form-upload__input
             .form-upload__input-line
-              input(name="price" type="text" placeholder="Цена").form-upload__input
+              input(name="price" type="number" placeholder="Цена" required).form-upload__input
             .form-upload__input-line.form-upload__input-line--btn
               button(type="submit").button Добавить
